# civic-meeting-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: lexicon.climate.yaml
configs/sources/: localview.yaml  meetingbank.yaml
data/crosswalks/: fips_crosswalk.csv  nri_county_slim.csv
data/demo/: actions.parquet  conflicts.parquet  meetings.parquet  provenance.parquet
data/demo/analysis/: by_hazard.parquet  by_region.parquet  by_state.parquet  by_time.parquet  coverage.parquet  exposure_alignment.parquet  exposure_jurisdictions.parquet  hazard_by_region.parquet
data/demo/eval_reports/: latest.json  latest_lexicon.json  latest_llm.json
data/golden/: golden_dataset.jsonl
docs/: ARCHITECTURE.md  DEPLOY.md  PART_II_PLATFORM.md  QUESTIONS_FOR_RESEARCHER.md  RECORDING_SCRIPT.md
notebooks/: 01_exploration.ipynb
scripts/: build_demo_snapshot.py  build_nri_slim.py
src/yse_meetings/: __init__.py  cli.py  config.py  label.py  schema.py
src/yse_meetings/analysis/: regions.py  summarize.py
src/yse_meetings/dedup/: entity_resolution.py  jurisdiction.py
src/yse_meetings/enrich/: hazard_exposure.py
src/yse_meetings/eval/: metrics.py
src/yse_meetings/extract/: lexicon.py  llm_extractor.py
src/yse_meetings/extract/prompts/: action_extraction.md
src/yse_meetings/ingest/: __init__.py  engine.py  loaders.py  transforms.py
tests/: test_dedup.py  test_extract.py  test_schema.py
