[project]
name = "yse-meetings"
version = "0.1.0"
description = "Reproducible pipeline for extracting municipal climate actions from council-meeting transcripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "rapidfuzz>=3.6",
    "requests>=2.31",
    "pyyaml>=6.0",
    "datasets>=2.18",
    "streamlit>=1.33",
    "plotly>=5.20",
    "scikit-learn>=1.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yse_meetings"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
